# 41r-advisor

./: .gitignore  41R-Browser-Testing-Playbook.md  41R-Constitution.md  41R-Slice-H1.md  CLAUDE.md
41r/: .pre-commit-config.yaml  Makefile  PROJECT_STATUS.md  STATUS.md  __init__.py  pyproject.toml  test_e2e.py
41r/bench/: EVALUATION.md  PAPER_DRAFT.md  README.md  run_full_eval.sh
41r/core/: cache.py  events_log.py  hooks.py  metrics.py  provider_router.py  workspace.py
41r/experiments/: QUALITY_REPORT_v2.md  backlog.md  browser_mode_validation.md  research_scan_2026-04-14.md
41r/modules/: agent_loop.py  benchmark_loader.py  browser_runner.py  cate_validator.py  claim_tagger.py  cohort_report.py  cohort_runner.py  cross_cohort_meta.py  hallucination_guard.py  persona_generator.py  persona_store.py  plan_cache.py  prompt_loader.py  provenance.py  report_analyzer.py  report_gen.py  review_agent.py  selector_memory.py  version_manager.py  vision_clicker.py
41r/personas/: EXTENSION_STATUS.md
41r/reports/: EXECUTIVE_REPORT.html  SIMPLE_REPORT.html  index.html  sample_report_v1.html  sample_report_v2.html
41r/scripts/: pre-commit  render_executive.py  run_golden_sessions.py
41r/tests/: conftest.py  test_cohort_report.py  test_cohort_runner.py  test_hallucination_guard.py  test_persona_store.py  test_version_manager.py
persona_agent/: API_GUIDE.md  ARCHITECTURE.md  BROWSER_MODE_REVIEW.md  Dockerfile  EVOLUTION_HARNESS.md  README.md  conftest.py  docker-compose.yml  pyproject.toml
persona_agent/tests/: test_action_timeout.py  test_cohort_report.py  test_cohort_runner.py  test_data_files_accessible.py  test_smoke.py  (+16 more)
(+766 files in other folders)
